Terraform/Proyecto-Ingress-Deployer/manifests/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnp-example-ingress
  namespace: gnp-example
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gnp-example-ingress
    networking.gke.io/v1.FrontendConfig: http-redirect-config
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gke-gnp-example-service
            port:
              number: 8080
        path: /example/*
        pathType: ImplementationSpecific
